# form_builder

./: .env.example  .gitignore  .replit  AI_API_Integration_Guide.md  AI_INTEGRATION_GUIDE.md  API_DOCUMENTATION.md  ARCHITECTURE_GUIDE.md  App.razor  Architecture_Claude_Python_Integration.md  Blazor_FormBuilder_FAQ.md  Blazor_Quick_Reference.md  Blazor_Technical_Setup.md  COMPREHENSIVE_SETUP_GUIDE.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  EMAIL_GUIDE.md  FormBuilder_Advanced_Features_QA.md  FormBuilder_Component_Architecture_Explained.md  FormBuilder_FAQ.md  FormBuilder_Practical_Usage_Guide.md  FormBuilder_Technology_Stack_QA.md  FormBuilder_Usage_Examples.md  GITHUB_READY.md  GITHUB_REPOSITORY_INFO.md  GITHUB_SETUP.md  GITHUB_STATUS.md  INSTALLATION_COMPLETE.md  Integration_Python_Streamlit_API.md  LICENSE  LOCALHOST_SETUP_RAPIDE.md  LOCAL_SETUP.md  PROJECT_OVERVIEW.md  Program.cs  Pure_Technology_Stack_Development.md  Python_venv_Streamlit_Guide.md  QUICK_START_GUIDE.md  Quick_Reference.md  README-BLAZOR.md  README.md  READY_FOR_GITHUB.md  (+34 more)
ia/: README.md  pyproject.toml
ia/formbuilder_ai_env/: pyvenv.cfg
ia/models/MfactModels/: Aatrr.cs  Actype.cs  Adjust.cs  AsOfExpend.cs  AsOfOidlot.cs  AsOfOpnpos.cs  AsOfTExpend.cs  AsOfTIncome.cs  AsOfTOidlot.cs  AsOfTUnsetl.cs  AsOfTaxlot.cs  Auttrx.cs  Brkcom.cs  CRsult.cs  CallPrg.cs  Codes.cs  Contry.cs  Curncy.cs  DailyP.cs  Dasha.cs  Dashc.cs  Dbloc.cs  Defitm.cs  Defset.cs  Exchng.cs  Extract.cs  Falias.cs  Family.cs  Gandl.cs  GkMst.cs  GkTrx.cs  Gl.cs  Gl988.cs  (+60 more)
ia/streamlit/: ai_assistant.py  run_ai_assistant.py
(+401 files in other folders)
